# context-aware-vision-grounded-kb-agent

./: .env.dev  .env.dev.template  .env.prod.template  .gitignore  LICENSE  Makefile  README.md  azure.yaml  docker-compose.dev-services.yml
.github/: copilot-instructions.md
.github/GITHUB_ISSUE_TEMPLATES/: bug_report.md  deferred_followup.md  feature_request.md
.github/agents/: archivist.agent.md  coder.md  debugger.md  deployer.md  implementer.agent.md  planner.agent.md  planner.md  product-manager.agent.md  release-manager.agent.md  reviewer.agent.md  reviewer.md  tech-lead.agent.md  technical-pm.agent.md  tester.md
.github/instructions/: agents-workbench.instructions.md  azure-infra.instructions.md  context-engineering.instructions.md  (+9 more)
docs/: roadmap.md  setup-and-makefile.md
infra/: main.bicep  main.json  main.parameters.json
scripts/: configure-app-agent-endpoint.sh  configure-containerapp-registries.sh  configure-containerapp-target-ports.sh  dev-check-port-owner.sh  dev-clean-data.sh  dev-init-emulators.sh  dev-ollama-native.sh  dev-seed-kb.sh  dev-setup-gpu.sh  dev-setup.sh  dev-web-live-control.sh  dev-web-live.sh  enable-cosmos-public-access.sh  enable-storage-public-access.sh  install-package.sh  prod-pipeline-request.sh  prod-post-down-cleanup.sh  prod-setup.sh  publish-agent.sh  register-agent.sh  setup-entra-auth.sh  setup-redirect-uris.sh  system-check.sh
shared-scratchpads/: 011-story-7.md  015-optimized-dev-setup-delivery.md
src/: .env.sample
src/agent/: .dockerignore  .env.sample  Dockerfile  main.py  pyproject.toml  requirements.txt
src/agent/agent/: client_factories.py  config.py  grounding_middleware.py  group_resolver.py  image_service.py  kb_agent.py  orchestrator.py  request_context.py  scope_config.py  search_result_store.py  search_tool.py  security_middleware.py  session_repository.py  vision_middleware.py  web_search_agent.py
src/agent/agent/config/: internal-search-agent.yaml
src/agent/agent/prompts/: system_prompt-dev.md  system_prompt-prod.md
src/agent/agent/prompts/internal_search_agent/: system_prompt.md
src/agent/agent/prompts/orchestrator/: system_prompt.md
src/agent/agent/prompts/web_search_agent/: system_prompt.md
src/agent/middleware/: jwt_auth.py  request_context.py
src/agent/tests/: test_ag_ui.py  test_citation_lookup.py  test_contextual_filtering_e2e.py  test_department_filter_integration.py  test_endpoints.py  test_group_resolver.py  test_handoff_middleware_patch.py  test_jwt_auth.py  test_kb_agent.py  test_multi_turn.py  test_orchestrator.py  test_scope_config.py  test_search_tool.py  test_search_tool_filtering.py  test_security_middleware.py  test_session_repository.py  test_vision_middleware.py  test_web_search_agent.py
src/analyzers/: manage_analyzers.py  pyproject.toml
src/analyzers/definitions/: kb-image-analyzer.json
src/functions/: .dockerignore  .env.sample  Dockerfile  function_app.py  manage_analyzers.py  pyproject.toml
src/functions/fn_convert_cu/: Dockerfile  cu_client.py  cu_images.py  cu_text.py  function_app.py  pyproject.toml
src/functions/fn_convert_markitdown/: Dockerfile  __init__.py  __main__.py  describe_images.py  extract_images.py  function_app.py  html_to_md.py  merge.py  pyproject.toml
src/functions/fn_convert_mistral/: Dockerfile  function_app.py  mistral_ocr.py  pyproject.toml
src/functions/fn_index/: Dockerfile  __init__.py  __main__.py  embedder.py  function_app.py  indexer.py  pyproject.toml  summarizer.py
src/functions/shared/: __init__.py  blob_storage.py  config.py  pyproject.toml
src/functions/tests/: test_entry_points.py
src/functions/tests/test_convert/: test_cu_text.py
src/functions/tests/test_convert_cu/: test_cu_images.py  test_html_parser.py  test_merge.py
src/functions/tests/test_convert_markitdown/: test_describe_images.py  test_extract_images.py  test_html_to_md.py  test_merge.py
src/functions/tests/test_index/: test_embedder.py  test_summarizer.py
src/functions/tests/test_shared/: test_config_lazy.py  test_get_article_ids.py
src/mcp-web-search/: .dockerignore  Dockerfile  pyproject.toml
src/mcp-web-search/config/: whitelist.yaml
src/mcp-web-search/mcp_web_search/: __main__.py  search.py  search_dev.py  search_prod.py  server.py  whitelist.py
src/mcp-web-search/tests/: test_search.py  test_search_dev.py  test_search_prod.py  test_server.py  test_whitelist.py
src/spikes/001-cu-analyzers/: .env.sample  pyproject.toml
src/web-app/: .dockerignore  .env.sample  Dockerfile  chainlit.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
src/web-app/__tests__/: blob.test.ts
src/web-app/__tests__/api/: conversations.routes.test.ts
src/web-app/__tests__/components/: ChatHistoryHydrator.test.tsx  CitationAwareAssistantMessage.test.tsx  CitationDialog.test.tsx  CitationDialogContext.test.tsx  ConversationSidebar.test.tsx  CopilotMessageRenderer.test.tsx  CopilotWorkspace.test.tsx  SearchToolRenderer.test.tsx  chatMessageTransforms.test.ts
src/web-app/app/: client_factories.py  config.py  data_layer.py  globals.css  layout.tsx  main.py  page.tsx
src/web-app/app/api/conversations/: route.ts
src/web-app/app/api/conversations/[threadId]/: route.ts
src/web-app/app/api/conversations/[threadId]/citations/[toolCallId]/[refNumber]/: route.ts
src/web-app/app/api/conversations/[threadId]/messages/: route.ts
src/web-app/app/api/copilotkit/: route.ts
src/web-app/app/api/images/[...path]/: route.ts
src/web-app/app/api/web-references/[...params]/: route.ts
src/web-app/components/: ChatHistoryHydrator.tsx  CitationAwareAssistantMessage.tsx  CitationDialog.tsx  CitationDialogContext.tsx  ConversationSidebar.tsx  ConversationThreadContext.tsx  CopilotMessageRenderer.tsx  CopilotWorkspace.tsx  SearchToolRenderer.tsx  ToolRenderers.tsx  WebSearchToolRenderer.tsx  chatMessageTransforms.ts
src/web-app/lib/: agent.ts  auth.ts  blob.ts  config.ts  conversations.ts  copilotRuntime.ts  messageContent.ts  types.ts
src/web-app/tests/: test_client_factories.py  test_data_layer.py  test_main.py  test_ui.py
(+203 files in other folders)
