[project]
name = "kb-agent"
version = "0.1.0"
description = "KB Search Agent — hosted agent on Microsoft Foundry with vision-grounded search"
requires-python = ">=3.11"
dependencies = [
    "agent-framework-core>=1.0.0",
    "agent-framework-openai>=1.0.0",
    "agent-framework-azure-ai>=1.0.0rc6",
    "azure-ai-agentserver-agentframework>=1.0.0b17",
    "azure-identity>=1.19.0",
    "azure-search-documents>=11.6.0",
    "azure-ai-inference>=1.0.0b1",
    "azure-cosmos>=4.9.0",
    "azure-storage-blob>=12.24.0",
    "azure-monitor-opentelemetry>=1.8.0",
    "opentelemetry-sdk>=1.20.0",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "openai>=1.60.0",
    "python-dotenv>=1.0.0",
    "starlette>=1.0.0rc1,<2.0.0",
    "PyJWT[crypto]>=2.8.0",
    "agent-framework-ag-ui>=1.0.0b260402",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["integration: requires running local Docker-backed services and emulators"]
addopts = "-m 'not integration'"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv]
prerelease = "allow"
# Override agentserver's upper-bound pin (<=rc3) — agentserver 1.0.0b17 pins
# agent-framework-core<=1.0.0rc3 and agent-framework-azure-ai<=1.0.0rc3, but
# we need core 1.0.0 GA and azure-ai rc6 which are backward-compatible.
override-dependencies = [
    "agent-framework-core>=1.0.0",
    "agent-framework-azure-ai>=1.0.0rc6",
]
