[project]
name = "vision-grounded-knowledge-agent"
version = "0.1.0"
description = "Vision-Grounded Knowledge Agent — conversational agent with image-aware search over Azure AI Search"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.0",
    "azure-identity>=1.19.0",
    "azure-search-documents>=11.6.0",
    "azure-ai-inference>=1.0.0b1",
    "azure-storage-blob>=12.24.0",
    "agent-framework-core==1.0.0b260107",
    "agent-framework-azure-ai==1.0.0b260107",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
prerelease = "allow"
