[project]
name = "fn-convert-cu"
version = "0.1.0"
description = "Convert HTML to Markdown via Azure Content Understanding"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fn_convert_cu"]
