[project]
name = "fn-convert-markitdown"
version = "0.1.0"
description = "Convert HTML to Markdown via MarkItDown + GPT-4.1 vision"
requires-python = ">=3.11"
dependencies = [
    "markitdown>=0.1.5",
    "beautifulsoup4>=4.12.0",
    "openai>=1.50.0",
    "kb-ingestion-shared",
]

[tool.uv.sources]
kb-ingestion-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fn_convert_markitdown"]
