[project]
name = "fn-convert-mistral"
version = "0.1.0"
description = "Convert HTML to Markdown via Mistral Document AI + GPT-4.1 vision"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "kb-ingestion-shared",
]

[tool.uv.sources]
kb-ingestion-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fn_convert_mistral"]
