[project]
name = "kb-ingestion-shared"
version = "0.1.0"
description = "Shared utilities for KB ingestion pipeline functions"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.20.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
