[project]
name = "content-understanding-spike"
version = "0.1.0"
description = "Spike: Azure Content Understanding for HTML KB articles with embedded images"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-contentunderstanding>=1.0.0b1",
    "azure-identity>=1.19.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "aiohttp>=3.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
